# Corporate-Quiz

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  ruff.toml  start.sh
app/: settings.py
app/application/api/: __init__.py  auth.py  birthdays.py  companies.py  company_actions.py  deps.py  error_handlers.py  quiz.py  routers.py  user_actions.py  users.py
app/core/interfaces/: birthday_repo_interface.py  birthday_serv_interface.py  company_repo_interface.py  file_storage_interface.py  quiz_repo_interface.py  user_repo_interface.py  user_serv_interface.py
app/core/repositories/: birthday_repository.py  company_repository.py  quiz_repository.py  redis_repository.py  user_repository.py
app/core/schemas/: __init__.py  auth_schemas.py  birthdays_schemas.py  companies_schemas.py  company_schemas.py  pagination_schemas.py  quiz_schemas.py  user_schemas.py
app/core/services/: auth_service.py  base_http_service.py  birthday_service.py  company_service.py  notification_service.py  quiz_service.py  user_service.py
app/infrastructure/celery/: celery_app.py
app/infrastructure/celery/tasks/: common.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 00001_add_birthday_and_user_models.py  00001_initial_company_and_users_models.py  00001_initial_migration.py  00001_initial_user_models.py  00002_initial_companies_models.py  00003_initial_quiz_models.py  00004_initial_quiz_attempt_models.py  00005_add_cascade_delete_to_company_members.py  00006_company_members_cascade_on_delete.py  00007_create_company_invitations_relationship.py  00008_introduce_membership_request_model.py
app/infrastructure/postgres/: __init__.py  connection.py  session_manager.py
app/infrastructure/security/: jwt.py
app/infrastructure/storage/: __init__.py  local_storage.py
app/templates/: reset_password.html
app/utils/: common.py  exceptions.py
(+7 files in other folders)
